--- a/distro.html
+++ b/distro.html
@@ -1,188 +1,103 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-	<title>One Brain Together - Distro Webstore</title>
-	<link rel="icon" type="image/x-icon" href="IWW.png">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <title>One Brain Together - Distro Webstore</title>
+    <link rel="icon" type="image/x-icon" href="IWW.png">
 
-
-	<style>
-		table, th, td {
-  		border: 1px solid black;
-  		border-radius: 10px;
-	}	
-	</style>
-
-		
+    <style>
+        table, th, td {
+            border: 1px solid black;
+            border-radius: 10px;
+        }   
+    </style>
 </head>
 
 <body>
-	<h1><a href="https://onebraintogether.com"><font color="#3400ff">One Brain Together</font></a></h1>
+    <h1><a href="https://onebraintogether.com"><font color="#3400ff">One Brain Together</font></a></h1>
 
-	<h2><font color="#ff3400">DISTRO</font></h2>
-	<p><i>Official webstore v1.2 2024<br>Allow 1 week for shipping. Please <a href="mailto:onebraintogether@gmail.com">email</a> or <a href="https://instagram.com/onebraintogether">DM</a> with any inquiries.</p>
-<table>
-	<tr>
-	<td>
-		<div style="
-		  overflow: auto;
-		  display: flex;
-		  flex-direction: column;
-		  justify-content: flex-end;
-		  align-items: center;
-		  width: 259px;
-		  background: #FFFFFF;
-		  border: 1px solid rgba(0, 0, 0, 0.1);
-		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-		  border-radius: 10px;
-		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
-		  ">
-		    <img src="distro/iowb tee front.png" alt="It's Over/We're Back Tee" onerror="this.style.display='none'" style="width: 100%;">
-		  <div style="padding: 20px;">
-		      <p style="
-		    font-size: 18px;
-		    line-height: 20px;
-		  ">It's Over/We're Back Tee</p>
-		      <p style="
-		    font-size: 18px;
-		    line-height: 20px;
-		    font-weight: 600;
-		  ">$34.99</p>
-		    <a target="_blank" href="https://square.link/u/xXqAKQJA?src=embed" style="
-		    display: inline-block;
-		    font-size: 18px;
-		    line-height: 48px;
-		    height: 48px;
-		    color: #ffffff;
-		    min-width: 212px;
-		    background-color: #3400ff;
-		    text-align: center;
-		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-		    border-radius: 50px;
-		  ">Buy now</a>
-		  </div>
-		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-		</div>
-	</td>
-<td>
-    <div style="
-      overflow: auto;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      align-items: center;
-      width: 259px;
-      background: #FFFFFF;
-      border: 1px solid rgba(0, 0, 0, 0.1);
-      box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-      border-radius: 10px;
-      font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
-      ">
-        <img id="product-image" src="distro/iowb pants front.png" alt="It's Over/We're Back Pants" style="width: 100%;">
-        <div style="padding: 20px;">
-            <div style="display: flex; justify-content: center;">
-                <img src="distro/iowb pants front.png" alt="Front View" onclick="changeImage('distro/iowb pants front.png')" style="width: 50px; cursor: pointer; margin: 0 5px;">
-                <img src="distro/iowb pants back.png" alt="Back View" onclick="changeImage('distro/iowb pants back.png')" style="width: 50px; cursor: pointer; margin: 0 5px;">
-            </div>
-            <p style="
-            font-size: 18px;
-            line-height: 20px;
-          ">It's Over/We're Back Pants</p>
-            <p style="
-            font-size: 18px;
-            line-height: 20px;
-            font-weight: 600;
-          ">$44.99</p>
-            <button onclick="addToCart('It\'s Over/We\'re Back Pants', 44.99)" style="
-            display: inline-block;
-            font-size: 18px;
-            line-height: 48px;
-            height: 48px;
-            color: #ffffff;
-            min-width: 212px;
-            background-color: #3400ff;
-            text-align: center;
-            box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-            border-radius: 50px;
-          ">Buy Now</button>
-        </div>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-    </div>
-</td>
-	<td>
-		<div style="
-		  overflow: auto;
-		  display: flex;
-		  flex-direction: column;
-		  justify-content: flex-end;
-		  align-items: center;
-		  width: 259px;
-		  background: #FFFFFF;
-		  border: 1px solid rgba(0, 0, 0, 0.1);
-		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-		  border-radius: 10px;
-		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
-		  ">
-		    <img src="distro/iowb shorts front.png" alt="It's Over/We're Back Shorts" onerror="this.style.display='none'" style="width: 100%;">
-		  <div style="padding: 20px;">
-		      <p style="
-		    font-size: 18px;
-		    line-height: 20px;
-		  ">It's Over/We're Back Shorts</p>
-		      <p style="
-		    font-size: 18px;
-		    line-height: 20px;
-		    font-weight: 600;
-		  ">$24.99</p>
-		    <a target="_blank" href="https://square.link/u/Oz6XvMpT?src=embed" style="
-		    display: inline-block;
-		    font-size: 18px;
-		    line-height: 48px;
-		    height: 48px;
-		    color: #ffffff;
-		    min-width: 212px;
-		    background-color: #3400ff;
-		    text-align: center;
-		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-		    border-radius: 50px;
-		  ">Buy now</a>
-		  </div>
-		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-		</div>
-	</td>
+    <h2><font color="#ff3400">DISTRO</font></h2>
+    <p><i>Official webstore v1.2 2024<br>Allow 1 week for shipping. Please <a href="mailto:onebraintogether@gmail.com">email</a> or <a href="https://instagram.com/onebraintogether">DM</a> with any inquiries.</p>
+    
+    <table>
+        <tr>
+            <td>
+                <div class="product" data-images='["distro/iowb tee front.png", "distro/iowb tee back.png"]'>
+                    <img src="distro/iowb tee front.png" alt="It's Over/We're Back Tee" class="product-image" style="width: 100%;">
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">It's Over/We're Back Tee</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$34.99</p>
+                        <a target="_blank" href="https://square.link/u/xXqAKQJA?src=embed" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="product" data-images='["distro/iowb pants front.png", "distro/iowb pants back.png"]'>
+                    <img src="distro/iowb pants front.png" alt="It's Over/We're Back Pants" class="product-image" style="width: 100%;">
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">It's Over/We're Back Pants</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$44.99</p>
+                        <a target="_blank" href="https://square.link/u/YsJqFVbX?src=embed" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="product" data-images='["distro/iowb shorts front.png", "distro/iowb shorts back.png"]'>
+                    <img src="distro/iowb shorts front.png" alt="It's Over/We're Back Shorts" class="product-image" style="width: 100%;">
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">It's Over/We're Back Shorts</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$24.99</p>
+                        <a target="_blank" href="https://square.link/u/Oz6XvMpT?src=embed" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+        </tr>
+    </table>
 
+    <hr style="border: 1px solid rgb(2, 2, 2);">
+    <footer>© 2024 One Brain Together</footer>
 
-	<script>
-	    const images = [
-	        'distro/iowb tee front.png',
-	        'distro/iowb tee back.png',
-		'distro/iowb pants front.png',
-	        'distro/iowb pants back.png',
-		'distro/iowb shorts front.png',
-	        'distro/iowb shorts back.png',
-	    ];
-	    let currentImageIndex = 0;
-	
-	    function showImage(index) {
-	        const img = document.getElementById('product-image');
-	        img.src = images[index];
-	    }
-	
-	    function prevImage() {
-	        currentImageIndex = (currentImageIndex - 1 + images.length) % images.length;
-	        showImage(currentImageIndex);
-	    }
-	
-	    function nextImage() {
-	        currentImageIndex = (currentImageIndex + 1) % images.length;
-	        showImage(currentImageIndex);
-	    }
-	</script>
-	
-	</tr>
-</table>
+    <script>
+        document.querySelectorAll('.product-image').forEach(image => {
+            image.addEventListener('click', function() {
+                const productDiv = this.closest('.product');
+                const images = JSON.parse(productDiv.getAttribute('data-images'));
+                const currentImage = this.getAttribute('src');
+                const currentIndex = images.indexOf(currentImage);
+                const nextIndex = (currentIndex + 1) % images.length;
+                this.setAttribute('src', images[nextIndex]);
+            });
+        });
+    </script>
 </body>
-<hr style="border: 1px solid rgb(2, 2, 2);">
-<footer>
-© 2024 One Brain Together
 </html>
